english translation and press enter event

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Gestion des contacts</title>
+    <title>Contact management</title>
 </head>
 
 <body>
         <div class="container" id="form1">
             <div class="form">
-                    <h3 id="question">Choisissez une option:</h3>
+                    <h3 id="question">Choose an option:</h3>
                    <div>
                        <input type="text" id="inputValue" >
                    </div>
                    <div class="action">
-                        <input type="button" value="Annuler" onclick= reset()></input>
+                        <input type="button" value="Cancel" onclick= reset()></input>
                         <input type="button" value="OK" id="validation"></input>
                    </div> 
             </div>
